# md-vision-mcp

./: .gitignore  AGENTS.md  README.md  glama.json  package-lock.json  package.json  server.json  skills-lock.json  tsconfig.json  tsup.config.ts
.agents/skills/: NOTICE.md
.agents/skills/build-mcp-server/: SKILL.md
.agents/skills/build-mcp-server/references/: tool-design.md
.github/workflows/: ci.yml  publish.yml
benchmark/: .gitignore  NOTICE.md  README.md  pyproject.toml
benchmark/config/: default.toml
benchmark/harness/: __init__.py  agent.py  dataset.py  judge.py  mcp.py  metrics.py  middleware.py  prompts.py  report.py  runner.py  schemas.py  scoring.py  staging.py
benchmark/scripts/: convert_pdfs.py  download_data.py  mineru_cloud.py  page_report.py  postprocess.py
benchmark/tests/: test_agent.py  test_mcp.py  test_middleware.py  test_prompts.py  test_scoring_judge.py
src/: errors.ts  index.ts  indexing.ts  server.ts
src/images/: load.ts
src/io/: access.ts  http-text.ts  resources.ts
src/markdown/: document.ts  html-images.ts
src/mcp/: result.ts
src/tools/: index-md.ts  read-md-with-images.ts
test/: access.test.ts  html-images.test.ts  http-text.test.ts  indexing.test.ts  markdown.test.ts  server.test.ts  tools.test.ts
